# labrat

./: README.md  interpret  lr  lr-execution-spec.md  lr-update  pyproject.toml
.claude/commands/: interpret.md
lrlib/: __main__.py  interpret.py
tests/: conftest.py  test_integration.py
tests/docker/: .lr-agent-prompt  .lr-results  Dockerfile  Snakefile  config.yaml
tests/docker/scripts/: load_data.py  plot_results.py  train_model.py
