[project]
name = "lr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.50",
]

[project.scripts]
lr-interpret = "lrlib.interpret:main"

[dependency-groups]
dev = [
    "docker>=7.1.0",
    "pytest>=9.0.2",
    "pytest-timeout>=2.4.0",
]
